--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   },
   "dependencies": {
     "inline-style-prefixer": "^0.5.4",
+    "merge": "^1.2.0",
     "performance-now": "^0.2.0",
     "raf": "^3.1.0",
     "react": "^0.14.2",
